[tool.pdm]

[project]
name = "AI-art-video-generate"
version = ""
description = ""
authors = [
    {name = "Anderson", email = "andersonby@163.com"},
]
dependencies = [
    "librosa>=0.9.2",
    "moviepy>=1.0.3",
    "flake8>=5.0.4",
    "black>=23.1.0",
    "scikit-image>=0.19.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}
